# overklig_opcua

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CPPLINT.cfg  appveyor.yml  codecov.yml
.github/workflows/: cifuzz.yml  codeql.yml  debian_packing.yml  doc_upload.yml
arch/: Readme.md  clock.c
arch/eventloop_common/: eventloop_common.c  eventloop_common.h  eventloop_mqtt.c  timer.c  timer.h
arch/eventloop_posix/: eventloop_posix.c  eventloop_posix.h  eventloop_posix_eth.c  eventloop_posix_interrupt.c  eventloop_posix_tcp.c  eventloop_posix_udp.c
include/open62541/: client.h  client_highlevel.h  client_highlevel_async.h  client_subscriptions.h  common.h  config.h.in  pubsub.h  server.h  server_pubsub.h  types.h  util.h
plugins/: server_config.json5  ua_accesscontrol_default.c  ua_config_default.c  ua_config_json.c  ua_debug_dump_pkgs.c  ua_log_stdout.c  ua_log_syslog.c  ua_nodesetloader.c  ua_nodestore_hashmap.c  ua_nodestore_ziptree.c
plugins/crypto/: ua_certificategroup_filestore.c  (+3 more)
src/: ua_securechannel.c  ua_securechannel.h  ua_securechannel_crypto.c  ua_types.c  ua_types_encoding_binary.c  ua_types_encoding_binary.h  ua_types_encoding_json.c  ua_types_encoding_json.h  ua_types_encoding_xml.c  ua_types_encoding_xml.h
tools/: amalgamate.py  c2rst.py  ci.sh  gdb-prettyprint.py  generate_datatypes.py  generate_nodeid_header.py  generate_statuscode_descriptions.py  open62541.pc.in  prepare_packaging.py  valgrind_check_error.py
tools/azure-devops/freeRTOS/: CMakeLists.txt  build.sh
tools/azure-devops/freeRTOS/components/main/: CMakeLists.txt  hello_world_main.c
tools/ua-tool/: CMakeLists.txt  ua.c
tools/ua2json/: CMakeLists.txt  ua2json.c
(+139 files in other folders)
